--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -7,7 +7,8 @@ video {
 }
 
 .hero-container {
-  /* background: url("/images/img-1.jpg") center center/cover no-repeat; */
+  background: url("/public/images/ativo-suites.jpg") center center/cover
+    no-repeat;
   height: 100vh;
   width: 100%;
   display: flex;
